--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
 
+  firebase_core: ^3.8.1
+  cloud_firestore: ^5.5.1
+  speech_to_text: ^7.0.0
+  firebase_auth: ^5.3.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
